modify body return when get teams